[gd_scene load_steps=17 format=3 uid="uid://bho2bda3eutm4"]

[ext_resource type="Texture2D" uid="uid://ornxvijsv52u" path="res://Art/Gunslinger/Gunslinger 48x48 Sprite Sheet no weapons for sprite stacking.png" id="1_dmss6"]
[ext_resource type="Script" path="res://Script/Character/enemy_2.gd" id="1_giu6d"]
[ext_resource type="Texture2D" uid="uid://0beimakgn8ki" path="res://Art/Gun/Guns Sprite Sheet 32x32.png" id="3_jl0nr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eqhyu"]
height = 29.0

[sub_resource type="CircleShape2D" id="CircleShape2D_s3pow"]
radius = 165.245

[sub_resource type="AtlasTexture" id="AtlasTexture_wr6j8"]
atlas = ExtResource("3_jl0nr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80uoa"]
atlas = ExtResource("3_jl0nr")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptxow"]
atlas = ExtResource("3_jl0nr")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvg8f"]
atlas = ExtResource("3_jl0nr")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o073"]
atlas = ExtResource("3_jl0nr")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl7ij"]
atlas = ExtResource("3_jl0nr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_35lgg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr6j8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80uoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptxow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvg8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o073")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl7ij")
}],
"loop": false,
"name": &"shoot",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_lldi5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_dmss6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_grdhr"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_gg7h5"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_dmss6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13, 14, 15, 16, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mxojn"]
_data = {
"RESET": SubResource("Animation_lldi5"),
"idle": SubResource("Animation_grdhr"),
"walk": SubResource("Animation_gg7h5")
}

[node name="Enemy_2" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_giu6d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2(-1, 10.5)
shape = SubResource("CapsuleShape2D_eqhyu")

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_s3pow")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.509804, 0, 1, 1)
texture = ExtResource("1_dmss6")
hframes = 9
vframes = 13
frame = 9

[node name="RayCast2D2" type="RayCast2D" parent="Sprite2D"]
rotation = 0.513607
target_position = Vector2(180, 0)

[node name="RayCast2D3" type="RayCast2D" parent="Sprite2D"]
rotation = -0.541504
target_position = Vector2(180, 0)

[node name="RayCast2D" type="RayCast2D" parent="Sprite2D"]
target_position = Vector2(180, 0)

[node name="Gun" type="AnimatedSprite2D" parent="Sprite2D"]
position = Vector2(-1, 9)
sprite_frames = SubResource("SpriteFrames_35lgg")
animation = &"shoot"
frame = 4
frame_progress = 1.0
offset = Vector2(9.9, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mxojn")
}

[node name="Timer" type="Timer" parent="." groups=["enemy"]]
autostart = true

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
